package com.rezahdrm.behavioral.templatemethod;

public class SoftwareEngineering extends BaseEngineering {
    @Override
    protected void additional() {
        System.out.println("Data Structure");
        System.out.println("Algorithm Design");
        System.out.println("System Analysis and Design");
        System.out.println("Database");
        System.out.println("Software Engineering");
        System.out.println("Software Test");
    }
}
